--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                            </div>
                            <div class="row">
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-                                 <a href="https://dark.chetankomal.me/spprofiles.html">
+                                 <a href="https://dark.chetankomal.com/spprofiles.html">
                                     <div class="services color-5">
                                        <span class="icon2"><i class="fa fa-desktop"></i></span>
                                        <h3>Programming/<br>Social Profiles</h3>
@@ -89,7 +89,7 @@
                               </div>
                               
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-                                 <a href="https://dark.chetankomal.me/myprojects.html">
+                                 <a href="https://dark.chetankomal.com/myprojects.html">
                                     <div class="services color-3">
                                        <span class="icon2"><i class="fa fa-terminal"></i></span>
                                        <h3>Projects<br> <br></h3>
@@ -97,7 +97,7 @@
                                  </a>
                               </div>
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-                                 <a href="https://dark.chetankomal.me/certifications.html">
+                                 <a href="https://dark.chetankomal.com/certifications.html">
                                     <div class="services color-4">
                                        <span class="icon2"><i class="fa fa-id-card-o"></i></span>
                                        <h3>Certifications<br> <br></h3>   
@@ -480,7 +480,7 @@
                                        <a href="https://www.facebook.com/chetanverma17" style="color: black;" class="fa fa-facebook"></a> &nbsp;&nbsp;&nbsp;&nbsp;
                                        <a href="https://github.com/ChetanKomal" style="color: black;" class="fa fa-github"></a> &nbsp;&nbsp;&nbsp;&nbsp;
                                        <a href="https://www.linkedin.com/in/chetankomal/" style="color: black;" class="fa fa-linkedin"></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                       <a href="https://chetankomal.me/" style="color: rgb(243, 211, 30);"><h5>Dark/Light Mode</h5></a>
+                                       <a href="https://chetankomal.com/" style="color: rgb(243, 211, 30);"><h5>Dark/Light Mode</h5></a>
 
                                     </p>
                                  </div>
