--- a/spprofiles.html
+++ b/spprofiles.html
@@ -126,7 +126,7 @@
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
                            <div class="progress-wrap">
                               <strong>
-                                 <a href="https://www.instagram.com/_verma._here_/" target="_blank">
+                                 <a href="https://www.instagram.com/ck1.py/" target="_blank">
                                     <p style="color:darkorange">Instagram</p>
                                  </a>
                               </strong>
