--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                                        <i class="fa fa-code"></i>
                                     </div>
                                     <div class="timeline-label">
-                                       <h2><a href="https://www.wns.com"><b>WNS Global Services</b></a> <span>June 2022 - Present</span></h2>
+                                       <h2><a href="https://www.wns.com"><b>WNS Global Services</b></a> <span>June 2022 - Feb 2023</span></h2>
                                        <p><strong>Software Developer Intern</strong><br>Developing Software Solutions in C#, Python and .NET Framework.</p>
                                        <p></p>
                                     </div>
